Add major changes to website.

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,5 +5,20 @@
 </head>
 <body>
 <h1>This is the briefest of websites. </h1>
+<p><strong><h3>brevity</h3></strong></p>
+<p><em>Concise</em> and <em>exact</em> use of words.</p>
+<p> <ol>
+		<li> This list is short </li>
+		<li> This list is sweet </li>
+		<li> This list does not have a point </li>
+	</ol>
+</p>
+<p><ul>
+		<li> This list has more words </li>
+		<li> This list is not as sweet </li>
+		<li> This list does not have a point either </li>
+</ul></p>
+
+<p><a href= "http://literarydevices.net/brevity-is-the-soul-of-wit/">Brevity</a> is the soul of wit.</p>
 </body>
 </html>
