--- a/html/web_basics/table-practice.html
+++ b/html/web_basics/table-practice.html
@@ -22,5 +22,25 @@
 </tr>
 </table>
 
+<p>
+	<table border=2>
+<tr>
+	<td colspan="2"> Cell 1 </td>
+	
+	<td> Cell 3 </td>
+</tr>
+<tr>
+	<td> Cell 4 </td>
+	<td> Cell 5 </td>
+	<td rowspan="2"> Cell 6 </td>
+</tr>
+<tr>
+	<td> Cell 7 </td>
+	<td> Cell 8 </td>
+	
+</tr>
+</table>
+</p>
+
 </body>
 </html>
