--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -5,5 +5,12 @@
 </head>
 <body>
 <p>Welcome to Moon Bootz!</p>
+<nav>
+	<ul>
+		<li><a href="contact.html">Contact Us</a></li>
+		<li><a href="product_details.html">Product Details</a></li>
+		<li><a href="legal/waiver.html">Legal Information</a></li>
+	</ul>
+</nav>
 </body>
 </html>
