Add index page, finish release 0-4

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,9 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Fruits</title>
 </head>
 <body>
+<main>
+<header>
+<h1> 
+This is our GPS page! 
+</h1>
+<nav>
+	<a href="http://www.brucelawson.co.uk/2010/html5-articles-and-sections-whats-the-difference/"> this link </a> 
+</nav>
+</header>
+	<h1>Apples</h1>
+	<article>
+		<h2>The apples are red delicious.</h2>
+			<section>
+			<h3>your heading</h3>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</section>
+		<aside>
+			<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</aside>
+	</article>
+</main>
 
+<table border = "1"> 
+<tr> 
+	<th> Header </th>
+	<th> Header2</th>
+	<th> Header3 </th>
+</tr>
+<tr> 
+	<td rowspan = "2">1</td>
+	<td> 2</td>
+	<td> 3</td>
+</tr>
+<tr> 
+	<td> 4</td>
+	<td> 5</td>
+</tr>
+</table>
+
+<footer>
+Please contact me for more questions! Copyrighted by DBC 2017. </footer>
 </body>
 </html>
+<!-- HTML semantic tags are useful to organize and structure information within your page in a specific way. I think they are all pretty useful, I think it is useful because it gives a reader of your code a level of expectation of where things will appear, and tools to edit specific elements with css.
+
+The browser used a top down approach to displaying elements, and I believe parent>child.
+
+I thought creating snippets was extremely handy. I will definitely be creating snippets in the future to jump start my work.
+
+I think knowing the ins and outs of each element is difficult, especially to a beginner. I think Nat and I did a good job figuring it out. I think with more time and utilizing elements more and more frequently it will become more and more natural and we will just instinctively know which to use and when. -->
