--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Wildflowers Article</title>
+
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
   <section id="external-links">
